<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background9"
    tools:context=".ChitietVuKhi">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:text="@string/chinhsua"
        android:textColor="#D50000"
        android:textSize="15pt"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ten"
        android:textColor="#D50000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvGia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gia"
        android:textColor="#D50000"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTen" />

    <TextView
        android:id="@+id/tvMau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mau"
        android:textColor="#D50000"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtGia" />

    <ImageView
        android:id="@+id/imgHinh"
        android:layout_width="156dp"
        android:layout_height="151dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/khunghinh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChonhinh"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B2EBF2"
        android:text="@string/chonhinh"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHinh" />

    <EditText
        android:id="@+id/edtTen"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/tenthemhint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTen" />

    <EditText
        android:id="@+id/edtGia"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/giathemhint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintLeft_toRightOf="@id/tvTen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGia" />

    <EditText
        android:id="@+id/edtMau"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/mauthemhint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintLeft_toRightOf="@id/tvMau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMau" />

    <Button
        android:id="@+id/btnCapNhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#E57373"
        android:text="@string/capnhat"
        android:textAllCaps="false"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/phanloai"
        android:textColor="#D50000"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtGia" />

    <EditText
        android:id="@+id/edtPhanLoai"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phanloaithemhint"
        android:inputType="textPersonName"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabQuayVe"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/trove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp"
        app:tint="@null" />
</androidx.constraintlayout.widget.ConstraintLayout>